# rim-tarea-1

./: .gitignore  CMakeLists.txt  Frame.cpp  Frame.h  README.md  README.txt  Stats.cpp  Stats.h  Video.cpp  Video.h  busqueda.cpp  deteccion.cpp  evaluar.py  extraccion.cpp  gt.txt  utils.cpp  utils.h
comerciales/: MD5SUM
television/: MD5SUM
